--- a/.github/workflows/SyncGitee.yml
+++ b/.github/workflows/SyncGitee.yml
@@ -13,9 +13,9 @@ jobs:
             SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
           with:
             # 注意替换为你的 GitHub 源仓库地址
-            source-repo: "https://github.com/GitHubWebb/GitApplyPatch.git"
+            source-repo: "git@github.com:GitHubWebb/GitApplyPatch.git"
             # 注意替换为你的 Gitee 目标仓库地址
-            destination-repo: "https://gitee.com/LiuYanZhiYuZhiZhe/git-apply-patch.git"
+            destination-repo: "git@gitee.com:LiuYanZhiYuZhiZhe/git-apply-patch.git"
                 
         - name: Build Gitee Pages
           uses: yanglbme/gitee-pages-action@master
