--- a/.github/workflows/SyncGitee.yml
+++ b/.github/workflows/SyncGitee.yml
@@ -25,4 +25,4 @@ jobs:
             # 注意在 Settings->Secrets 配置 GITEE_PASSWORD 密码
             gitee-password: ${{ secrets.GITEE_PASSWORD }}
             # 注意替换为你的 Gitee 仓库
-            gitee-repo: https://gitee.com/LiuYanZhiYuZhiZhe/git-apply-patch
+            gitee-repo: LiuYanZhiYuZhiZhe/git-apply-patch
